--- a/sass/_pricing-tables.sass
+++ b/sass/_pricing-tables.sass
@@ -1,6 +1,8 @@
 .pricing-container
 	display: flex
 	justify-content: space-around
+	@media screen and (max-width: $break-medium)
+		flex-wrap: wrap
 
 .pricing-table
 	text-align: center
@@ -13,7 +15,7 @@
 	float: left
 	margin: 1rem 5%
 	@media screen and (max-width: $break-medium)
-		width: 50%
+		width: 80%
 		float: none
 		margin: 2rem auto
 	@media screen and (max-width: $break-small)
